# TelegramQuizBot

./: .env_template  .flake8  .gitignore  README.md  fixture_poll.json  fixture_users.json  pyproject.toml  requirements.txt
base_template/: alert_message.html  content.html  header.html  menu.html
config/: settings.py  urls.py
main/: urls.py  views.py
main/templates/: page_main.html
marketing/: urls.py
marketing/templates/: page_marketing.html
quiz/: forms.py  models.py  tests.py  urls.py  views.py
quiz/templates/: main_quiz.html
quiz/templates/modal/: modal_create_quiz.html  modal_delete_quiz.html  modal_edit_quiz.html
rating/: urls.py  views.py
rating/templates/: page_rating.html
report/: urls.py  views.py
report/templates/: page_report.html
telegram_bot/: apps.py  models.py  services.py
users/: forms.py  models.py  tests.py  urls.py  views.py
users/management/commands/: seed_data.py
users/templates/: login.html  registration.html
users/templates/email/: template_email.html  verification_code.html
users/templates/user/: profile.html
users/templatetags/: photo.py
