[tool.poetry]
name = "telegramquizbot"
version = "0.1.0"
description = ""
authors = ["IvanPro91 <ivan-don4encko@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
django = "^5.2.6"
psycopg2-binary = "^2.9.10"
pillow = "^11.3.0"
pytelegrambotapi = "^4.29.1"
python-dotenv = "^1.1.1"


[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
